--- a/app/assets/stylesheets/thank_you.scss
+++ b/app/assets/stylesheets/thank_you.scss
@@ -1,13 +1,13 @@
 
-#page-header {
+#thank-you-page-header {
   text-align: center;
 }
 
-#page-header #directions {
+#thank-you-page-header #directions {
   margin: 30px 0;
 }
 
-#page-header #sign-more {
+#thank-you-page-header #sign-more {
   color: #ff4500;
   font-weight: 600;
   text-decoration: none;
