--- a/app/assets/stylesheets/user_fields.scss
+++ b/app/assets/stylesheets/user_fields.scss
@@ -16,5 +16,9 @@
 }
 
 #user-info-form #user-details #form-fields .form-group small {
-  color: #868e96
+  color: #868e96;
+}
+
+#user-info-form #user-details #submit-form-button i {
+  display: none;
 }
