--- a/app/views/application/review.html.haml
+++ b/app/views/application/review.html.haml
@@ -1,5 +1,5 @@
 %main
-  %div.header#page-header
+  %div.header#review-page-header
     %div.container
       %div.row
         %div.col-lg-12
@@ -13,3 +13,5 @@
 
 
   = render partial: 'signing_panel'
+
+  = render partial: 'layouts/footer'
