--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,9 @@
 
     = javascript_include_tag 'typeahead'
 
+    = javascript_include_tag 'fingerprintjs2'
+
 
   %body
+    = render partial: 'layouts/site_header'
     = yield
