--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,23 +9,23 @@
           %p
             © Brian Howald 2017
           %div.social-media-links
-            %a{'href' => 'https://twitter.com/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.twitter{'href' => 'https://twitter.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-twitter
-            %a{'href' => 'https://github.com/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.github{'href' => 'https://github.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-github
-            %a{'href' => 'https://linkedin.com/in/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.linkedin{'href' => 'https://linkedin.com/in/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-linkedin
-            %a{'href' => 'https://instagram/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.instagram{'href' => 'https://instagram.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-instagram
 
         %div.footer-row
 
-          %p.site-link
+          %p.site-link#privacy
             %a{href: '/privacy'}
               Privacy Policy
 
           &middot;
 
-          %p.site-link
+          %p.site-link#acknowledgments
             %a{href: '/acknowledgments'}
               Acknowledgments
