--- a/app/assets/stylesheets/campaigns_chunk.scss
+++ b/app/assets/stylesheets/campaigns_chunk.scss
@@ -202,3 +202,9 @@
     display: none;
   }
 }
+
+.campaigns-chunk .explanation .campaigns .campaign .social-media-share-links {
+  // padding: 0 10px;
+  border-top: 1px solid #ccc;
+  padding: 12px 20px;
+}
