Changed title and minor padding.

--- a/app/assets/stylesheets/make_it_easy.scss
+++ b/app/assets/stylesheets/make_it_easy.scss
@@ -156,7 +156,7 @@ main {
 #filters .filter-buttons .col {
   cursor: pointer;
   font-weight: 600;
-  padding: 5px;
+  padding: 10px 0 5px;
 
   // text-align: center;
   // white-space: nowrap;
