Changes to copy.

--- a/app/views/application/acknowledgments.html.haml
+++ b/app/views/application/acknowledgments.html.haml
@@ -10,7 +10,7 @@
               %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
               %a{href: 'https://twitter.com/dianavilibert'}
                 Diana Vilibert
-              for the copy
+              for copy
 
             %li
               %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
@@ -44,7 +44,7 @@
             %li
               %i.zmdi-hc-li.zmdi.zmdi-dot-circle-alt
               %a{href: 'https://github.com/js-cookie/js-cookie'}
-                js-cookie.js
+                js-cookie
 
 
 
