--- a/app/views/application/privacy.html.haml
+++ b/app/views/application/privacy.html.haml
@@ -15,7 +15,7 @@
               This site uses cookies stored in your browser to keep track of the campaigns you've signed and your info for filling them out.
             %hr/
             %p
-              If you don't want this data stored at all, that's fine. Just clear your cookies.
+              If you don't want this data stored at all, just clear your cookies.
 
 
   = render partial: 'layouts/footer'
