--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -1,9 +1,6 @@
 #review-page-header {
+  margin: 30px 0;
   text-align: center;
-}
-
-#review-page-header #directions {
-  margin: 0 0 30px;
 }
 
 #review-page-header #encouragement span.uh-oh {
