--- a/app/assets/stylesheets/campaigns_chunk.scss
+++ b/app/assets/stylesheets/campaigns_chunk.scss
@@ -19,6 +19,8 @@
 
 .campaigns-chunk .explanation .campaigns .campaign {
   padding: 0;
+  border-top: 1px solid rgba(0,0,0,0.25);
+  border-bottom: 1px solid rgba(0,0,0,0.25);
 }
 
 .campaigns-chunk .explanation .campaigns .campaign.citywide {
